<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match_parent_x_2"
    android:orientation="vertical"
    android:background="#fff">

    <androidx.appcompat.widget.Toolbar
        style="@style/MyToolbar"
        android:id="@+id/toolbar_home"
        app:title="@string/desc_home">

        <TextView
            android:text="@string/desc_settings"
            style="@style/Toolbar_TextView"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="#00FFFFFF"
        style="@style/MyCardView">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_star_border_24"
            android:layout_gravity="right"
            android:layout_marginRight="50dp"
            android:layout_marginTop="8dp"
            tools:ignore="VectorDrawableCompat"/>

        <TextView
            android:text="@string/default_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_value"
            android:layout_gravity="right"
            android:layout_marginRight="40dp"
            android:layout_marginTop="8dp"
            android:textColor="#666666"/>

        <TextView
            android:text="@string/imdb_rating"
            android:id="@+id/textView"
            style="@style/MyTextView"/>

        <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="6"
            android:id="@+id/seek_bar"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="16dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="#00FFFFFF"
        style="@style/MyCardView">

        <TextView
            android:text="@string/movie_genres"
            style="@style/MyTextView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/recView_settings"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>